--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500&display=swap');
-*{
-  font-family: 'AR One Sans', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500&display=swap");
+* {
+  font-family: "AR One Sans", sans-serif;
 }
-main{
-  background-color: #9BABB8;
+main {
+  background-color: #9babb8;
   /* background-image: url('./imgs/background.jpg');
   background-size: cover; */
 }
-.frame{
+.frame {
   width: 330px;
 }
-.btnMainColor{
+.btnMainColor {
   background-color: #4d4c4c !important;
   color: white !important;
 }
-.opertatorBtn{
+.opertatorBtn {
   background-color: #666767 !important;
   color: white !important;
 }
-.btnMainColor,.opertatorBtn{
-transition: all 400ms !important;
+.btnMainColor,
+.opertatorBtn {
+  transition: all 400ms !important;
 }
-.btnMainColor:hover,.opertatorBtn:hover{
+.btnMainColor:hover,
+.opertatorBtn:hover {
   color: black !important;
+}
+.screen *::selection {
+  user-select: none !important;
+}
+.screen *{
+  cursor: default;
 }
